[gd_scene load_steps=12 format=3 uid="uid://bt8ttmwh8ex8j"]

[ext_resource type="Script" path="res://scripts/front/winner.gd" id="1_ko5g7"]
[ext_resource type="Shader" path="res://tres/blur_shader.gdshader" id="2_foxdq"]
[ext_resource type="Texture2D" uid="uid://drhpp5pp5uh63" path="res://icon.svg" id="3_i8i46"]
[ext_resource type="FontFile" uid="uid://bt5pn0ptnei0q" path="res://fonts/Bungee/Bungee-Regular.ttf" id="4_54g4v"]
[ext_resource type="FontFile" uid="uid://c8fc2cp5fitkg" path="res://fonts/Bungee_Inline/BungeeInline-Regular.ttf" id="5_j06bu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_70asp"]
shader = ExtResource("2_foxdq")
shader_parameter/lod = 1.0
shader_parameter/mix_percentage = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yl6m"]
bg_color = Color(0.894118, 0.533333, 0.235294, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37noc"]
bg_color = Color(0.988235, 0.952941, 0.92549, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uaiyo"]
resource_local_to_scene = true
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.0980392)
shadow_size = 6
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7c8l"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lm8r3"]
bg_color = Color(0.882353, 0.341176, 0.301961, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Winner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ko5g7")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_70asp")
layout_mode = 0
offset_left = -805.0
offset_top = -602.0
offset_right = 2125.0
offset_bottom = 1484.0
texture = ExtResource("3_i8i46")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1500.0
offset_bottom = 800.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3yl6m")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 1490.0
offset_bottom = 790.0
theme_override_styles/panel = SubResource("StyleBoxFlat_37noc")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 80.0
offset_right = 1500.0
offset_bottom = 330.0
theme_override_colors/font_color = Color(0.85098, 0.176471, 0.12549, 1)
theme_override_fonts/font = ExtResource("4_54g4v")
theme_override_font_sizes/font_size = 140
text = "WINNER_NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_right = 1500.0
offset_bottom = 165.0
theme_override_colors/font_color = Color(0.85098, 0.176471, 0.12549, 1)
theme_override_fonts/font = ExtResource("4_54g4v")
theme_override_font_sizes/font_size = 60
text = "the winner is"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player1" type="Control" parent="."]
anchors_preset = 0
offset_left = 120.0
offset_top = 317.5
offset_right = 160.0
offset_bottom = 357.5

[node name="Panel2" type="Panel" parent="Player1"]
layout_mode = 0
offset_right = 580.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uaiyo")

[node name="Label" type="Label" parent="Player1"]
layout_mode = 0
offset_top = 10.0
offset_right = 580.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(0.882353, 0.341176, 0.301961, 1)
theme_override_fonts/font = ExtResource("4_54g4v")
theme_override_font_sizes/font_size = 40
text = "plyr1's equation"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Player1"]
layout_mode = 0
offset_top = 65.0
offset_right = 580.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0.882353, 0.341176, 0.301961, 1)
theme_override_fonts/font = ExtResource("5_j06bu")
theme_override_font_sizes/font_size = 50
text = "1 + 2 + 3 + 4 + 5 = 15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Player1"]
layout_mode = 0
offset_top = 135.0
offset_right = 580.0
offset_bottom = 190.0
theme_override_colors/font_color = Color(0.933333, 0.619608, 0.596078, 1)
theme_override_fonts/font = ExtResource("4_54g4v")
theme_override_font_sizes/font_size = 40
text = "time used : 00 seconds"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 810.0
offset_top = 317.5
offset_right = 850.0
offset_bottom = 357.5

[node name="Panel2" type="Panel" parent="Player2"]
layout_mode = 0
offset_right = 580.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uaiyo")

[node name="Label" type="Label" parent="Player2"]
layout_mode = 0
offset_top = 10.0
offset_right = 580.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(0.882353, 0.341176, 0.301961, 1)
theme_override_fonts/font = ExtResource("4_54g4v")
theme_override_font_sizes/font_size = 40
text = "plyr2's equation"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Player2"]
layout_mode = 0
offset_top = 65.0
offset_right = 580.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0.882353, 0.341176, 0.301961, 1)
theme_override_fonts/font = ExtResource("5_j06bu")
theme_override_font_sizes/font_size = 50
text = "1 + 2 + 3 + 4 + 5 = 15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Player2"]
layout_mode = 0
offset_top = 135.0
offset_right = 580.0
offset_bottom = 190.0
theme_override_colors/font_color = Color(0.933333, 0.619608, 0.596078, 1)
theme_override_fonts/font = ExtResource("4_54g4v")
theme_override_font_sizes/font_size = 40
text = "time used : 00 seconds"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 440.0
offset_top = 570.0
offset_right = 480.0
offset_bottom = 610.0

[node name="Panel3" type="Panel" parent="Close"]
layout_mode = 0
offset_right = 620.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("StyleBoxFlat_m7c8l")

[node name="Panel4" type="Panel" parent="Close"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 610.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lm8r3")

[node name="Label3" type="Label" parent="Close"]
layout_mode = 0
offset_right = 620.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("4_54g4v")
theme_override_font_sizes/font_size = 55
text = "START NEXT ROUND"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClickArea" type="Panel" parent="Close"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
z_index = 100
layout_mode = 0
offset_right = 620.0
offset_bottom = 100.0

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_top = 630.0
offset_right = 1500.0
offset_bottom = 830.0
theme_override_colors/font_color = Color(0.882353, 0.341176, 0.301961, 1)
theme_override_fonts/font = ExtResource("4_54g4v")
theme_override_font_sizes/font_size = 50
text = "AUTOCLOSE IN 5 SECONDS"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="Close/ClickArea" to="." method="_on_click_area_gui_input"]
[connection signal="mouse_entered" from="Close/ClickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="Close/ClickArea" to="." method="_on_click_area_mouse_exited"]
